--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=My Blog
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_myblog?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_my-blog?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Z9a81sd2ld06bs94.
 
